# backEndZoo

./: README.md  animal_schema.py  pyproject.toml  schema.py
backend/: manage.py
backend/animals/: apps.py  models.py  tests.py
backend/animals/migrations/: 0001_initial.py
backend/zoosite/: asgi.py  schema.graphql  schema.py  settings.py  urls.py  wsgi.py
