[tool.poetry]
name = "backendzoo"
version = "0.1.0"
description = ""
authors = ["ilay <ilaysoffer@gmail.com>"]
readme = "README.md"
packages = [{ include="backend" }]


[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = "^0.206.0"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
